--- a/index.html
+++ b/index.html
@@ -5,8 +5,54 @@
     <title>HTML Academy: Барбершоп</title>
   </head>
   <body>
+    <header>
+        <nav>
+            <a>
+              <img src="img/index-logo.svg" width="368" height="" alt="Логотип барбешопа "Бородинский>
+            </a>
+            <ul>
+                <li><a href="info.html">Информация</a></li> 
+                <li><a href="news.html">Новости</a></li>
+                <li><a href="price.html">Прайс-лист</a></li>
+                <li><a href="catalog.html">Магазин</a></li>
+                <li><a href="contacts.html">Контакты</a></li>
+            </ul>
+            <ul>
+              <li>
+                <button type="button">Войти</button>
+              </li>
+            </ul>
+        </nav>
+    </header>    
+    <main>
+      <h1>Барбершоп "Бородинский"</h1>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+      <section>
+        <h2>Преимущества</h2>
+        <ul>
+          <li>
+            <h3>Быстро</h3>
+            <p>Мы делаем свою работу бысьро! Два часа пролетят 
+              незаметно и вы - счастливый обладатель стильной
+            стрижки-минутки</p>
+          </li>
+          <li>
+            <h3>Круто</h3>
+            <p>Забудьте, как вы стриглись раньше. Мы сделаем из
+                вас звезду футбола или кино! Во всяком случае
+                внешне.</p>
+          </li>
+          <li>
+            <h3>Дорого</h3>
+            <p>Наши мастера - профессионалы своего дела и не
+              могут стоить дешево. К тому же, разве цена не дает
+              определенный статус?</p>
 
+          </li>
+        </ul>
+
+
+      </section>
+    </main>
   </body>
 </html>
